--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,9 @@ h6,
 p {
   margin: 0;
 }
-a{text-decoration: none;}
+a {
+  text-decoration: none;
+}
 
 .list {
   margin-top: 0;
@@ -77,7 +79,6 @@ header {
 .main-head {
   display: flex;
   align-items: center;
-  
 }
 .logo {
   font-family: "Raleway", sans-serif;
@@ -111,25 +112,29 @@ header {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-title-color);
+  padding-bottom: 28px;
 }
-
 
 .site-nav-link {
   display: block;
   padding-top: 28px;
- 
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.link.current {
+  position: relative;
+  color: var(--accent-color);
 }
 .current::after {
-    content: "";
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--accent-color);
-    color: var(--accent-color);
-    margin-top: 28px;
-    width: 100%;
-    display: block;
+  content: "";
+  height: 4px;
+  border-radius: 4px;
+  background-color: var(--accent-color);
+  margin-top: 31px;
+  width: 100%;
+  display: block;
+  position: absolute;
 }
 .contact-list {
   display: flex;
@@ -327,13 +332,12 @@ header {
   width: 44px;
   height: 44px;
   transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-icon {
   width: 20px;
   height: 20px;
   fill: var(--icon-color);
-
 }
 .social-icons-link:hover,
 .social-icons-link:focus {
@@ -376,7 +380,7 @@ header {
   height: 100%;
   fill: var(--icon-color);
   transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-client:focus,
 .icon-client:hover {
@@ -448,9 +452,8 @@ address {
 
 .filter-button:hover,
 .filter-button:focus {
-   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-      0px 4px 4px rgba(0, 0, 0, 0.06),
-      1px 4px 6px rgba(0, 0, 0, 0.16);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
   background-color: var(--accent-color);
   color: #ffffff;
 }
@@ -501,146 +504,95 @@ address {
   padding-bottom: 20px;
 }
 .thumb .projects-link {
-    display: inline-block;
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(33, 150, 243, 0.9);
-    opacity: 0;
-    overflow: hidden;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-block;
+  position: absolute;
+  content: "";
+  width: 100%;
+  height: 100%;
+  bottom: 0;
+  left: 0;
+  background-color: rgba(33, 150, 243, 0.9);
+  opacity: 0;
+  overflow: hidden;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .thumb {
-    position: relative;
-    overflow: hidden; 
+  position: relative;
+  overflow: hidden;
 }
 a:hover .projects-overlay,
 a:focus .projects-overlay {
-    transform: translatex(0);
+  transform: translatex(0);
 }
 
-.text-overlay{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    font-family: 'Roboto';
-    font-size: 18px;
-    line-height: 1.56;
-    letter-spacing: 0.03em;
-    text-align: left;
-    padding: 64px 24px;
-    color: #ffffff;
-    opacity: 0;
+.text-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  font-family: "Roboto";
+  font-size: 18px;
+  line-height: 1.56;
+  letter-spacing: 0.03em;
+  text-align: left;
+  padding: 64px 24px;
+  color: #ffffff;
+  opacity: 0;
 }
 .projects-overlay {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    top: 1px;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    transform: translateY(100%);
-    background-color: var(--accent-color);
-    opacity: 0.9;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 1px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateY(100%);
+  background-color: var(--accent-color);
+  opacity: 0.9;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list:hover .text-overlay,
 .list:focus .text-overlay {
-    opacity: 0.9;
-}
-}
-/*modal*/
-/*.backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 200;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.2);
+  opacity: 0.9;
 }
 
-.modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    width: 100%;
-    transform: translate(-50%, -50%);
-    max-width: 528px;
-    min-height: 581px;
-    padding: 17px 17px;
-    background-color: #ffffff;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 4px;
-}
-
-.close-icon {
-    border-radius: 50%;
-}
-
-.close-link {
-    width: 11px;
-    height: 11px;
-    box-sizing: border-box;
-    border-radius: 50%;
-}
-
-.btn-close {
-    position: absolute;
-    top: 17px;
-    right: 17px;
-    width: 30px;
-    height: 30px;
-    background: #FFFFFF;
-    border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-}
-*/
 .backdrop {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 0;
+  pointer-events: none;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    display: flex;
-    justify-content: flex-end;
-    transform: translate(-50%, -50%);
-    min-height: 581px;
-    min-width: 528px;
-    background-color: #ffffff;
-    padding-top: 8px;
-    padding-right: 8px;
-    
-    
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  display: flex;
+  justify-content: flex-end;
+  transform: translate(-50%, -50%);
+  min-height: 581px;
+  min-width: 528px;
+  background-color: #ffffff;
+  padding-top: 8px;
+  padding-right: 8px;
 }
 .modal-btn {
-    height: 30px;
-    width: 30px;
-    border-radius: 50%;
-    border-color: rgba(0, 0, 0, 0.1);
-    background-color: rgba(255, 255, 255, 1);
-    
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+  border-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(255, 255, 255, 1);
 }
